# ChangeLog for dev-java/antlr-netbeans-cnd
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Oct 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump

  08 Oct 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump

  30 Sep 2007; Miroslav Šulc <fordfrog@gentoo.org> ++,
  -antlr-netbeans-cnd-2.7.7_p20070920070410.ebuild:
  Version bump

  24 Sep 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -antlr-netbeans-cnd-2.7.7_p20070825092557.ebuild,
  -antlr-netbeans-cnd-2.7.7_p20070828082648.ebuild,
  +antlr-netbeans-cnd-2.7.7_p20070920070410.ebuild:
  Version bump

  28 Aug 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump.

  26 Aug 2007; Miroslav Šulc <fordfrog@gentoo.org> ++,
  -antlr-netbeans-cnd-2.7.7_p20070720164821.ebuild:
  Version bump.

  24 Jul 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  antlr-netbeans-cnd-2.7.7_p20070720164821.ebuild:
  Added ~amd64 keyword

  24 Jul 2007; Miroslav Šulc <fordfrog@gentoo.org> ++,
  -antlr-netbeans-cnd-2.7.7_p20070619185104.ebuild,
  -antlr-netbeans-cnd-2.7.7_p20070714111440.ebuild:
  Version bump

  14 Jul 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump.

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +antlr-netbeans-cnd-2.7.7_p20070619185104.ebuild:
  Added patched ANTLR needed for Netbeans CND module
