@@ -1,10 +1,7 @@
-DIST netbeans-cnd-6.0_beta1_p20070929075133.tar.bz2 1917595 RMD160 c88322b4714a5dc8bc5f234bc3a1599b57dfaaf1 SHA1 a56fa2273669509c7a51051e11d276c2983bdca9 SHA256 fd16746086bcc7fd3f4b4babf1fb00337bc820526d7c2d67127ac18b499619be
-DIST netbeans-cnd-6.0_beta1_p20071008091345.tar.bz2 1914756 RMD160 848bc81ce2e26cee2b4b597e49c95aa7ccd1378f SHA1 070584fcbf44ef7b5ce8be9d5f659146af2f2cd5 SHA256 e910b2fc20fd160fe83821853eee82ae6ace03d4cd213d5c4e628f3330ffade8
 DIST netbeans-cnd-6.0_beta1_p20071016040557.tar.bz2 1926731 RMD160 c89ed60397819721eecea5ebb371cc063349b119 SHA1 c350e4c3e63407197332274ba3612d56ca817456 SHA256 4f3741a03f01f2274d6d2f5e079e1b04eb4f25ecc0fc8859b147a52845c0aca5
-DIST netbeans-nbbuild-6.0_beta1_p20070929075133.tar.bz2 467323 RMD160 c6ddd4318e898c571aaa0d2445d8151d809e49e8 SHA1 178368e5e6d645f92351add3855ba7362af9637a SHA256 79ab25c6529dee721d6ee060f99d11a06362ca512150ad837ec98b8577503b59
-DIST netbeans-nbbuild-6.0_beta1_p20071008091345.tar.bz2 450409 RMD160 ebd435d72ea9bfcdeebd0fc4084ff4c1d1185f79 SHA1 866d74dd2d91f0bcc5639e9c24c0114bd4675a02 SHA256 323f76c2198620474dd83ac63cb687f945eb890ebe970f53bd13747c16f48d4a
+DIST netbeans-cnd-6.0_beta2_p20071024005630.tar.bz2 1961956 RMD160 b6973ef7c1f1b20896277892226e853d77930fc0 SHA1 e319adf5d618a47356dbf450bb907bf6ad264ab6 SHA256 9b41c57a2d18854c29dcfc5f4cae1b793c80fe809ab42658a3be689bb82d2bfc
 DIST netbeans-nbbuild-6.0_beta1_p20071016040557.tar.bz2 466551 RMD160 e398e6376fa36b4be5f1a66bd6563a019ec454f2 SHA1 c8487fdfba21c004846273d9f701f3bb3652f943 SHA256 7e9d9d79c1a43e8cf66aa1f2975c1474722d63d659c7a7a63cf687ff7f75908d
-EBUILD antlr-netbeans-cnd-2.7.7_p20070929075133.ebuild 1041 RMD160 3498c89a601a31208ef705175f67f3e633a82eb8 SHA1 8bb032a1f2dfeeb671505e79f82fc2428a0a6d3e SHA256 5d8afc45529cfc33cc9586f6b7d0aa80b12f3fda59f56544c7829fe3a7ef829a
-EBUILD antlr-netbeans-cnd-2.7.7_p20071008091345.ebuild 1041 RMD160 a3c0894170945965dd4345153b11c8267b727fdb SHA1 ca7449797f4b5d0aaf29daf27674bb1b9e69094d SHA256 f096c7b985a3f840866c858e5e95218c75e052855284bf24bae7edc198929b77
+DIST netbeans-nbbuild-6.0_beta2_p20071024005630.tar.bz2 476428 RMD160 e28b941477e6d55e502542ff86d4c8b4226e4154 SHA1 485133c66c072d235b8c0232d24afe07a2552b77 SHA256 2b3b00508d900c5fe71457f5e6bd5442cb48cb67f246ada49e0825a2bc0873f7
 EBUILD antlr-netbeans-cnd-2.7.7_p20071016040557.ebuild 1041 RMD160 85fbcaf1d9be527d615b888fb7ecfeb561553845 SHA1 921c8ee52011d560e3ce986a9856236248f4edeb SHA256 e79071a259db7ed037d79f0157996dfa2567ebde1f2103083b9077dfdf21488f
-MISC ChangeLog 1357 RMD160 25c996db25fbf4f9504bbe344ee09eee83677298 SHA1 7784495e66748b65982fd1256fd20507b6a612d9 SHA256 0a1333256cc6b269a3ba023d690c45fe689d2d4418198e378443afde7b7dd997
+EBUILD antlr-netbeans-cnd-2.7.7_p20071024005630.ebuild 1041 RMD160 8e551b1576856f459a4547e0978d787f688257cd SHA1 2fd1e353434a0bf03e9f72c57828224aa6c69946 SHA256 a79da37a9e4bc952e4cd7ac1cdbe6d434db812b9fc86ad07778a97e885dcd420
+MISC ChangeLog 1533 RMD160 e9520bd3ab509e82cd635fcd07c366ebca825eea SHA1 916233a8408e7ec134a5603843c1cca308640fa6 SHA256 f0e9d1dd0b082085e828d8e1b6a6da1c6739260d3d9175177779f04d17ae9461
