@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Oct 2007; Miroslav Šulc <fordfrog@gentoo.org> ++,
+  -antlr-netbeans-cnd-2.7.7_p20070929075133.ebuild,
+  -antlr-netbeans-cnd-2.7.7_p20071008091345.ebuild:
+  Version bump
+
   16 Oct 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
   Version bump
 
